--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -40,6 +40,7 @@ a {
     width:100%;
     margin-top:0px;
     float:left;
+    position: relative;
     margin-bottom: 17px;
     background: #f0f0f0;
 }
